# bayesian_comsol_optimization

./: .gitignore  README.md  pyproject.toml  two_model_test.py
examples/: comsol_thermoelectric.py
scripts/: __init__.py  analyze_results.py  run_optimization.py
src/comsol_opt/: __init__.py  acquisition.py  cli.py  comsol_cli.py  deterministic_bo.py  objective.py  optimizer.py  parameters.py  state.py  surrogate.py  sweep.py  transforms.py  visualization.py  workflow.py
src/comsol_opt/analysis/: __init__.py  dataset.py  expressions.py  plots.py
src/comsol_opt/comsol/: __init__.py  parser.py  runner.py
tests/: conftest.py  test_objective.py  test_parameters.py  test_parser.py  test_sweep.py
