[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comsol-opt"
version = "1.0.0"
description = "Bayesian optimization for COMSOL simulations using BoTorch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "botorch>=0.11",
    "gpytorch>=1.11",
    "torch>=2.0",
    "numpy",
    "matplotlib",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
comsol-opt = "comsol_opt.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
